[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "mesher"
version = "2.1.0"

dependencies = [
    'vtk',
    'numpy',
    'scipy',
    'matplotlib',
    'cloudpickle',
    'gdal[numpy]',
    'metis',
    'mpi4py',
    'natsort'
]

#[tool.scikit-build]
#wheel.packages = ["pysrc/mesher_utils"]

[project.scripts]
mesher = "mesher:main"
meshpermutation = "tools.meshpermutation:main"