[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "mesher"
version = "2.1.0"

dependencies = [
    'vtk',
    'numpy',
    'scipy',
    'matplotlib',
    'cloudpickle',
    'gdal[numpy]',
    'metis',
    'mpi4py',
    'natsort'
]

#[tool.scikit-build]
#wheel.packages = ["pysrc/mesher_utils"]

[project.scripts]
mesher = "mesher:main"
mesh2shp = "mesher.tools.mesh2shp:main"
mesh2vtu = "mesher.tools.mesh2vtu:main"
mesh2merge = "mesher.tools.meshmerge:main"
meshpermutation = "mesher.tools.meshpermutation:main"
meshstats = "mesher.tools.meshstats:main"
